--- a/src/apps/clipper/templates/extract.html.jinja2
+++ b/src/apps/clipper/templates/extract.html.jinja2
@@ -10,13 +10,24 @@
 <body>
     <main class="container">
         <h1>{{ resource.metadata.title }}</h1>
+        <h2>URL</h2>
+        <ul>
+            <li><a href="{{resource.url}}">{{resource.url}}</a></li>
+            <li><a href="{{resource.final_url}}">{{resource.final_url}}</a></li>
+        </ul>
         <h2>Metadata</h2>
         <ul>
             {% for key, val in resource.metadata.items() %}
             <li><em>{{key}}</em>: {{val}}</li>
             {% endfor %}
         </ul>
-
+        <h2>Links</h2>
+        <ul>
+            {% for val in resource.outbound_links %}
+            <li><a href="{{val}}">{{val}}</a></li>
+            {% endfor %}
+        </ul>
+        <h2>Content</h2>
         <div style="max-width: 100%; overflow-x: auto; white-space: nowrap;">
             <div style="display: inline-block; width: 600px;  margin-right: 20px;vertical-align: top;">
                 <div style="white-space: wrap;">
